[project]
name = "shegerpay"
version = "2.2.0"
description = "Official Python SDK for ShegerPay Payment Verification Gateway"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "ShegerPay", email = "support@shegerpay.com"}
]
requires-python = ">=3.8"
dependencies = [
    "requests>=2.25.0",
]
keywords = ["shegerpay", "payment", "verification", "ethiopia", "cbe", "telebirr"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://shegerpay.com"
Documentation = "https://shegerpay.com/docs"
Repository = "https://github.com/black12-ag/ShegerPay-sdk.git"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["shegerpay"]
